<resources>
    <string name="app_name">BusPoint</string>
    <string name="userlocation">Location service must be enabled to access your location</string>
    <string name="userlocation_not_granted">Location services have not been enabled</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_search">Search Place</string>
    <string name="user_canceled_op">User canceled operation</string>
    <string name="pick_destination">Pick Destination</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_tag">Hakika Tutakufikisha</string>
    <string name="preference_file">com.gorillagang.buspoint.USER_PREFERENCES</string>
    <string name="saved_first_run">FIRST_RUN</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign Up</string>
    <string name="route_sim_disabled">Route Simulation Disabled</string>
    <string name="route_sim_enabled">Route Simulation Enabled</string>
    <string name="overpass_api_query">[out:json][timeout:25];(node[\"highway\"=\"bus_stop\"](around:%d,%f,%f););out;>;out skel qt;</string>
    <string name="already_registered">Already Registered?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="sure_to_logout">Are you sure you want to logout </string>
    <string name="logout">Logout</string>
    <string name="finding_nearest_bus_stop">Finding Bus Stop Near You</string>
    <string name="finding_destination_bus_stop">Finding Bus Stop Near Destination</string>
    <string name="calculating_shortest_route">Calculating Shortest Route</string>
    <string name="couldnt_find_stops_near_you">Oops! We couldn\'t find Bus Stops near you</string>
    <string name="couldnt_find_stops_near_destination">Oops! We couldn\'t find Bus Stops near your destination</string>
    <string name="title_activity_settings">Application Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="problems_calculating_route">We are having problems calculating the route</string>
    <string name="board_off_here">Board Off Here</string>
    <string name="cant_verify_email_address">Oops! Seems we can\'t verify your email address!</string>
    <string name="failed_registration">Failed Registration</string>
    <string name="verify">Verify</string>
    <string name="reset">Reset</string>
    <string name="ok">Ok</string>
    <string name="invalid_password">Password must have at least 1 special character, no whitespace and 4 characters long</string>
    <string name="drawing_route">Drawing the Route</string>
    <string name="title_activity_journey">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="stop_not_found">Stop Not Found</string>
    <string name="network_problem">Network Problem</string>
    <string name="enable_location_component_msg">Please enable the location component from your phone</string>
    <string name="enable_location_component_hdr">Enable Location Component</string>
    <string name="about_us">Buspoint is a new system for connecting and finding daladala transport more easily.\nThe app will show you the stations near you and guide you until you arrive.\nWhy wait to get lost? use Buspoint to get there!\n\n@BusPoint 2021</string>
    <string name="about_buspoint">About BusPoint</string>
    <string name="network_problems">Network Problems</string>
</resources>